[tool.poetry]
name = "repl_python3_YT-scraping-using-YT-API"
version = "0.1.0"
description = ""
authors = ["jagatjeeban <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
seaborn = "^0.11.2"
google-api-python-client = "^2.45.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
